syntax = "proto3";

package appstore;

service AppleIapService {
	rpc ApplePayVerify(Request) returns (Response); 
}

message Request{ // apple pay verify request
	string receipt_data = 1;
}

message Product{
	string product_id = 1;
	string item_id = 2;
}

message Response{ // response 
	int32 status = 1; // 0 is sucess
	string order_id = 2;
	repeated Product products = 3;
}
